# zerochat

./: .replit  LAUNCH.md  README.md  design_guidelines.md  main.py  needToKnow.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  tailwind.config.ts
app/: database.py  models.py  storage.py
app/routes/: rooms.py  websocket.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: connection-status.tsx  encryption-badge.tsx  message-input.tsx  message-list.tsx  passphrase-modal.tsx  user-list.tsx
client/src/hooks/: use-websocket.ts
client/src/lib/: crypto.ts
client/src/pages/: chat-room.tsx  room-selector.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
static/js/: chat.js  crypto.js  index.js
templates/: base.html  chat.html  index.html
